--- a/projects-review/playbook.yml
+++ b/projects-review/playbook.yml
@@ -1,6 +1,8 @@
 ---
 - name: Install and configure web service
   hosts:
+    - servera.lab.example.com
+    - serverb.lab.example.com
     - serverc.lab.example.com
     - serverd.lab.example.com
 
