--- a/projects-review/playbook.yml
+++ b/projects-review/playbook.yml
@@ -1,5 +1,6 @@
 ---
 - name: Install and configure web service
+gather_facts: no
   hosts:
     - serverc.lab.example.com
     - serverd.lab.example.com
